--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server --watch src/lib/db.json --port 3000"
+    "server": "json-server --watch src/lib/db.json --port 3000",
+    "render:start": "json-server --watch src/lib/db.json --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
